[package]
name = "git_control"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
eframe = { version = "=0.24.1", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "=0.24.1"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }
walkdir = "2.5"
